@@ -1335,7 +1335,7 @@
 				<height>115</height>
 				<centerleft>50%</centerleft>
 				<texture colordiffuse="4DFFFFFF">dialogs/clearlogo-back.png</texture>
-				<visible>[Control.HasFocus(5100) | Control.HasFocus(5200) | Control.HasFocus(5300) | Control.HasFocus(5400) | Control.HasFocus(6100) | Control.HasFocus(6200) | Control.HasFocus(6300) | Control.HasFocus(6600) | Control.HasFocus(6700) | Control.HasFocus(7100) | Control.HasFocus(7200) | Control.HasFocus(7300) | Control.HasFocus(7400) | Control.HasFocus(7500) | Control.HasFocus(7600)] + ![String.IsEmpty(Container().ListItem.Art(tvshow.clearlogo)) + String.IsEmpty(Container().ListItem.Art(clearlogo)) + String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.Clearlogo))]</visible>
+				<visible>[Control.HasFocus(5100) | Control.HasFocus(5200) | Control.HasFocus(5300) | Control.HasFocus(5400) | Control.HasFocus(5600) | Control.HasFocus(6100) | Control.HasFocus(6200) | Control.HasFocus(6300) | Control.HasFocus(6600) | Control.HasFocus(6700) | Control.HasFocus(7100) | Control.HasFocus(7200) | Control.HasFocus(7300) | Control.HasFocus(7400) | Control.HasFocus(7500) | Control.HasFocus(7600)] + ![String.IsEmpty(Container().ListItem.Art(tvshow.clearlogo)) + String.IsEmpty(Container().ListItem.Art(clearlogo)) + String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.Clearlogo))]</visible>
 		  		<visible>!Skin.HasSetting(HomeClearLogo)</visible>
 		  		<visible>!Window.IsVisible(DialogVolumeBar.xml)</visible>
 			</control>
@@ -1346,7 +1346,7 @@
 				<centerleft>50%</centerleft>
 				<aspectratio align="center" aligny="center">keep</aspectratio>
 				<texture>$VAR[HomeClearLogoVar]</texture>
-				<visible>Control.HasFocus(5100) | Control.HasFocus(5200) | Control.HasFocus(5300) | Control.HasFocus(5400) | Control.HasFocus(6100) | Control.HasFocus(6200) | Control.HasFocus(6300) | Control.HasFocus(6600) | Control.HasFocus(6700) | Control.HasFocus(7100) | Control.HasFocus(7200) | Control.HasFocus(7300) | Control.HasFocus(7400) | Control.HasFocus(7500) | Control.HasFocus(7600)</visible>
+				<visible>Control.HasFocus(5100) | Control.HasFocus(5200) | Control.HasFocus(5300) | Control.HasFocus(5400) | Control.HasFocus(5600) | Control.HasFocus(6100) | Control.HasFocus(6200) | Control.HasFocus(6300) | Control.HasFocus(6600) | Control.HasFocus(6700) | Control.HasFocus(7100) | Control.HasFocus(7200) | Control.HasFocus(7300) | Control.HasFocus(7400) | Control.HasFocus(7500) | Control.HasFocus(7600)</visible>
 		  		<visible>!Skin.HasSetting(HomeClearLogo)</visible>
 		  		<visible>!Window.IsVisible(DialogVolumeBar.xml)</visible>
 			</control>
